Styling fix for the welcome page on Firefox

--- a/templates/welcome/stylesheets/welcome.css
+++ b/templates/welcome/stylesheets/welcome.css
@@ -124,7 +124,7 @@ h2 {
   box-sizing: border-box;
   display: inline-block;
   padding-bottom: 100px;
-  width: 540px;
+  width: 530px;
 }
 
 .footer-container {
